# batotp

./: CMakeLists.txt
.github/workflows/: ci.yml
batotp/: CMakeLists.txt  ba.h  robot.h  spline.h
cmake/eigen/: CMakeLists.txt
